支持手势滑动的html轮播插件

--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0" />
 <link rel="stylesheet" href="base.css"  />
 <link rel="stylesheet" href="views.css" />
-<script type="text/javascript" src="query-2.1.1.min.js"></script>
+<script type="text/javascript" src="jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="base.js"></script>
 <script type="text/javascript" src="views.js"></script>
 <style type="text/css">
