--- a/demo.html
+++ b/demo.html
@@ -11,17 +11,7 @@
 <script type="text/javascript" src="base.js"></script>
 <script type="text/javascript" src="views.js"></script>
 <style type="text/css">
-.demo1{
-	position:relative;
-	margin: 50px auto;
-	-webkit-box-shadow:1px 1px 3px rgba(0,0,0,.5);
-	-moz-box-shadow:1px 1px 3px rgba(0,0,0,.5);
-	box-shadow:1px 1px 3px rgba(0,0,0,.5);
-}
 
-.demo1 .slider-panel img{
-	width:100%;
-}
 </style>
 <script type="text/jscript">
 
@@ -30,34 +20,7 @@
 </head>
 
 <body>
-<div class="demo1 views-slider" noauto="1">
-	<a class="slider-prev" href="###"></a>
-    <a class="slider-next" href="###"></a>
-    <div class="slider-content">
-    	<ul class="slider-panels">
-        	<li class="slider-panel">
-            	<img src="images/demo1-1.jpg" />
-            </li>
-            <li class="slider-panel">
-            	<img src="images/demo1-2.jpg" />
-            </li>
-            <li class="slider-panel">
-            	<img src="images/demo1-4.png" />
-            </li>
-            <li class="slider-panel">
-            	<img src="images/demo1-5.jpg" />
-            </li>
-        </ul>
-    </div>
-    <div class="slider-points">
-    	<a href="###" class="slider-point"></a>
-        <a href="###" class="slider-point"></a>
-        <a href="###" class="slider-point"></a>
-        <a href="###" class="slider-point"></a>
-    </div>
-</div>
-
-<div class="demo1 views-slider" noauto="1">
+<div class="demo1 views-slider">
 	<a class="slider-prev" href="###"></a>
     <a class="slider-next" href="###"></a>
     <div class="slider-content">
